--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "cakephp/cakephp": "^5.3.0",
         "cakephp/migrations": "^4.0.0",
         "cakephp/plugin-installer": "^2.0",
+        "friendsofcake/crud": "^7.2",
         "mobiledetect/mobiledetectlib": "^4.8.03"
     },
     "require-dev": {
