--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,10 @@
         "cakephp/cakephp": "^5.3.0",
         "cakephp/migrations": "^4.0.0",
         "cakephp/plugin-installer": "^2.0",
+        "firebase/php-jwt": "^7.0",
         "friendsofcake/crud": "^7.2",
-        "mobiledetect/mobiledetectlib": "^4.8.03"
+        "mobiledetect/mobiledetectlib": "^4.8.03",
+        "ramsey/uuid": "^4.9"
     },
     "require-dev": {
         "cakephp/bake": "^3.0.0",
